--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <meta name="robots" content="follow">
     <meta name="google-site-verification" content="_DmlGfkQVjN8YW6g3lXoT8uqdmbrzVvtWCd2oqHyoc8" />
     <meta name="description" content="Love Story 21">
+    <meta name="auther" content="Love Story">
+
     
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
