add google analitics

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,15 @@
     <meta name="google-site-verification" content="_DmlGfkQVjN8YW6g3lXoT8uqdmbrzVvtWCd2oqHyoc8" />
     <meta name="description" content="Love Story 21">
     <meta name="auther" content="Love Story">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1SNNK81MJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-G1SNNK81MJ');
+    </script>
     
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
